hero fixed on mobile

--- a/themes/airflowsummit/assets/scss/_banner.scss
+++ b/themes/airflowsummit/assets/scss/_banner.scss
@@ -8,7 +8,7 @@ section.hero-2025 {
 
   
   @media (max-width:640px) {
-    margin-top: -100px;
+    margin-top: -125px;
   }
 }
 
